--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-firebase/app": "^19.0.0",
+    "@react-native-firebase/auth": "^19.0.0",
     "@react-navigation/native-stack": "^6.9.22",
-    "expo": "~50.0.7",
+    "expo": "~50.0.8",
     "expo-status-bar": "~1.11.1",
+    "firebase": "^10.8.1",
     "react": "18.2.0",
     "react-native": "0.73.4",
     "react-native-onboarding-swiper": "^1.2.0"
