--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-native-firebase/app": "^19.0.0",
     "@react-native-firebase/auth": "^19.0.0",
+    "@react-navigation/compat": "^5.3.20",
     "@react-navigation/native-stack": "^6.9.22",
     "expo": "~50.0.8",
     "expo-status-bar": "~1.11.1",
