--- a/package.json
+++ b/package.json
@@ -12,13 +12,15 @@
     "@react-native-firebase/app": "^19.0.0",
     "@react-native-firebase/auth": "^19.0.0",
     "@react-navigation/compat": "^5.3.20",
+    "@react-navigation/native": "^6.0.0",
     "@react-navigation/native-stack": "^6.9.22",
     "expo": "~50.0.8",
     "expo-status-bar": "~1.11.1",
     "firebase": "^10.8.1",
     "react": "18.2.0",
     "react-native": "0.73.4",
-    "react-native-onboarding-swiper": "^1.2.0"
+    "react-native-onboarding-swiper": "^1.2.0",
+    "@react-native-community/datetimepicker": "7.6.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
